@@ -2,6 +2,9 @@
 
 namespace Drupal\cer;
 
+/**
+ * Defines possible operations for corresponding references.
+ */
 final class CorrespondingReferenceOperations {
   const ADD = 'add';
 
