@@ -1,3 +1,7 @@
+Corresponding Entity References 8.x-4.x-alpha1, 2017-02-12
+----------------------------------------------------------
+#2851976 by bmcclure: Clean up code comments and make alpha release
+
 Corresponding Entity References 8.x-4.x-dev, 2017-02-12
 -------------------------------------------------------
 #2457583 by bmcclure: CER Drupal 8 port (Initial release)
